k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-html-app
  namespace: test-html-app
  labels:
    app: test-html-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: test-html-app
